# minilibc

./: .travis.yml  CMakeLists.txt  LICENSE.md  README.md  run_tests.sh
Assembly/: Makefile  asm_tester.c  run_asm.sh
Assembly/srcs/: memchr.S  memcpy.S  memmove.S  memset.S  strcasecmp.S  strcmp.S  strlen.S  strncmp.S  strnlen.S  strstr.S  write.S
Assembly/srcs/stdio/: putchar.S  puts.S  write.S
Assembly/srcs/string/: memchr.S  memcpy.S  memmove.S  memset.S  rindex.S  strcasecmp.S  strcat.S  strchr.S  strcmp.S  strcspn.S  strlen.S  strncmp.S  strnlen.S  strpbrk.S  strstr.S
PreProcessor/cor/: functions.h  memory.h  memsize.h
PreProcessor/include/: preproc_minilib.h  preproc_minilibc_test.h
PreProcessor/lib/: libstring.h  libstring_print.h  libstring_utils.h
PreProcessor/src/: demo.c  preproc_minilib.h  preproc_minilibc_test.h
PreProcessor/src/cor/: functions.h  memory.h
PreProcessor/src/prep_lib/: libstring.h  libstring_print.h  libstring_utils.h
PreProcessor/tests/: class_tester.py  test_libstring.py  tester.sh  tester_wrapper.py
PreProcessor/tests/testsFile/: PreProcessor_FuncList
tests/: tester.sh  tester_wrapper.py
tests/testsFile_ASM/: ASM_FuncList  ASM_ListDebug
tests/testsFile_PreProcessor/: PreProcessor_ListDebug
